--- a/projeto-glass-html5/_css/estilo.css
+++ b/projeto-glass-html5/_css/estilo.css
@@ -1,17 +1,55 @@
 @charset "UTF-8";
 
-p {
-    text-align: justify;
-    text-indent: 50px;
-    color: aquamarine;
-};
+/* border box */
+
+html {box-sizing: border-box}
+
+*, *::before, *::after {box-sizing: inherit}
+
+/* figure */
 
 figure.foto-legenda {
     border: 8px solid white;
     box-shadow: 1px 1px 4px black;
-};
+
+    position: relative;
+
+    background-color: rgba(11, 11, 37, 0.575);
+}
 
 figure.foto-legenda img {
-    width: 100%;
+    max-width: 100%;
+}
 
-};
+figure.foto-legenda img:hover {
+    opacity: 0;
+}
+
+figure.foto-legenda figcaption {
+    position: absolute;
+
+    top: 0;
+
+    opacity: 0;
+
+    background-color: rgba(0, 0, 0, 0.863);
+    color: white;
+
+    text-align: center; 
+
+    width: 100%;
+    height: 100%;
+
+    transition: all 500ms;
+}
+
+figure.foto-legenda figcaption:hover {
+    opacity: 1;
+}
+
+/* inline */
+
+p {
+    text-align: justify;
+    text-indent: 50px;
+}
