--- a/projeto-glass-html5/_css/estilo.css
+++ b/projeto-glass-html5/_css/estilo.css
@@ -9,8 +9,29 @@ html {box-sizing: border-box}
 /* body */
 body {
     font-family: sans-serif;
+
+    margin: 0;
+
+    display: flex;
+    flex-direction: column;
 }
 
+/* div#interface */
+
+div#interface {
+    width: 75%;
+    background-color: whitesmoke;
+    margin: auto auto auto;
+    padding: 0 10px;
+    box-shadow: 0px 0px 10px gray;
+}
+
+/* header */
+
+header img {
+    position: absolute;
+    right: 100px;
+}
 
 /* header nav */
 
@@ -21,7 +42,7 @@ nav h1 {
 nav ul {
     position: absolute;
     top: 0;
-    right: 0;
+    right: 200px;
 }
 
 nav ul li {
