--- a/projeto-glass-html5/_css/estilo.css
+++ b/projeto-glass-html5/_css/estilo.css
@@ -1,4 +1,10 @@
 @charset "UTF-8";
+@font-face {
+    font-family: 'Bubble Gum';
+    src: url(../_fonts/bubblegum-sans-regular.otf)
+};
+
+@import url('https://fonts.googleapis.com/css?family=Roboto|Titillium+Web&display=swap');
 
 /* border box */
 
@@ -8,19 +14,21 @@ html {box-sizing: border-box}
 
 /* body */
 body {
-    font-family: sans-serif;
+    font-family: 'Roboto', sans-serif;
 
     margin: 0;
 
     display: flex;
     flex-direction: column;
+
+    background-color: whitesmoke;
 }
 
 /* div#interface */
 
 div#interface {
     width: 75%;
-    background-color: whitesmoke;
+    background-color: white;
     margin: auto auto auto;
     padding: 0 10px;
     box-shadow: 0px 0px 10px gray;
@@ -28,8 +36,32 @@ div#interface {
 
 /* header */
 
+header {
+    border-bottom: black solid 1px;
+
+    height: 150px;
+
+    background: url(../_imagens/glass-logo-peq.jpg) no-repeat 0px 95px;
+}
+
+header h1 {
+    color: gray;
+    text-shadow: 1px 1px 1px black;
+    margin-bottom: 0;
+
+    font-family: 'Bubble Gum', sans-serif;
+}
+
+header h2 {
+    color: rgba(128, 128, 128, 0.781);
+    margin-top: 0;
+
+    font-family: 'Titillium Web', serif;
+}
+
 header img {
     position: absolute;
+    top: 90px;
     right: 100px;
 }
 
@@ -56,7 +88,7 @@ nav ul li {
 
     padding: 5px;
 
-    transition: all 500ms;
+    transition: background 500ms;
 }
 
 nav ul li:hover {
