--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -30,16 +30,13 @@ p {
 }
 
 a {
-    text-decoration: none;
-
-    color: black;
+    color: gray;
 
     transition: inherit;
 }
 
 a:hover {
-    color: white;
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 /* div#interface */
